# metageniuses

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  INDEX.md  INTERPROT_REFERENCE.md  LOG.md  METAGENE_REFERENCE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
backend/: app.py  dummy_data.py  requirements.txt
configs/extraction/: metagene-cloud-class2.json  metagene-cloud-prod.json  metagene1.json
configs/sae/: default.json
data/: hmpd_disease.jsonl  hmpd_sex.jsonl  hmpd_source.jsonl  hvr_default.jsonl
docs/architecture/: runpod_setup.md
experiment_plans/: 01_organism_detectors.md  02_linear_probe.md  03_sae_health_check.md  04_sequence_umap.md  05_feature_clustering.md  06_cross_delivery.md  EXPERIMENTS.md  activation_pattern_classification.md  feature_labeling_mvp.md  linear_probe_pathogen.md
experiments/: _shared.py  cross_delivery.py  feature_clustering.py  feature_clustering.txt  linear_probe_pathogen.py  linear_probe_pathogen.txt  organism_detectors.py  organism_detectors.txt  probe_visualizations.py  probe_visualizations.txt  sae_health_check.py  sae_health_check.txt  sequence_umap.py  sequence_umap.txt
src/metageniuses/extraction/: config.py  extractor.py  model_adapter.py  storage.py
tests/extraction/: test_adaptive_batch.py  test_pipeline_fake.py  test_resume.py
tests/sae/: test_analyze.py
viz/: index.html  package-lock.json  package.json  vite.config.js
viz/src/: App.jsx  DetailsPanel.jsx  ExplorerView.jsx  FeaturePanel.jsx  LandingPage.jsx  SequenceStrip.jsx  Sidebar.jsx  index.css
(+21 files in other folders)
