[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "metageniuses"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
metageniuses-extract = "metageniuses.extraction.cli:main"
metageniuses-train-sae = "metageniuses.sae.train:main"
