[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "metageniuses"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "torch>=2.0",
    "transformers>=4.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
metageniuses-extract = "metageniuses.extraction.cli:main"
metageniuses-train-sae = "metageniuses.sae.train:main"
metageniuses-analyze-sae = "metageniuses.sae.analyze:main"
